ejemplo y documentacion de  clean architecture

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,20 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
+    "paths": {
+      "@domain/*": [
+        "src/domain/*"
+      ],
+      "@application/*": [
+        "src/application/*"
+      ],
+      "@infrastructure/*": [
+        "src/infrastructure/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
+      ]
+    },
   },
   "include": [
     "src/**/*.ts",
